# timelines-cc-editor

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis-ci.yml  Makefile  README  build.ocp2  build_deps.sh  data.json  dune  generate_website.sh  opam  opam_build.sh  start_website.sh  timeline.opam.locked
src/: admin.ml  build.ocp2  data_encoding.ml  data_types.ml  js_main.ml  main.ml  to_json.ml  utils.ml  utils_js.ml  xhr_lwt.ml
src/api/: api.ml  apiConfig.ml  apiData.ml  apiHandlers.ml  apiHandlers.mli  apiServer.ml  apiServices.ml  apiSession.ml  api_config.ml  api_config.mli  api_data.ml  build.ocp2  dune  emails.ml  main.ml  sendgrid_encoding.ml  sendgrid_xhr.ml
src/common/: build.ocp2  config.ml  csv_utils.ml  csv_utils.mli  data_encoding.ml  data_encoding.mli  data_types.ml  dune  misc.ml  misc.mli  utils.ml  utils.mli  xhr_lwt.ml
src/db/: build.ocp2  cleaner.ml  config.ml  csv_dbparser.ml  dBUpdater.ml  dBVersions.ml  dbData.ml  db_config.ml  db_config.mli  db_data.ml  db_intf.ml  db_version.ml  dune  main.ml  monad_lwt.ml  reader.ml  script.ml  writer.ml
src/parser/: build.ocp2  csv_parser.ml  dune  main.ml
src/ui/: admin.ml  alert_vue.ml  args.ml  build.ocp2  controller.ml  dispatcher.ml  dune  home.ml  home_vue.ml  js_main.ml  lang.ml  main.ml  main_simple.ml  navs.ml  ocptimeline_js.ml  pages.ml  panel.ml  request.ml  sendgrid_xhr.ml  text.ml  timeline_cookies.ml  timeline_display.ml  timeline_select.ml  timeline_vue.ml  ui_utils.ml  utils_js.ml  view.ml  view_vue.ml
src/vcs/: build.ocp2  dune  main.ml  vcs.ml
static/: footer.html  header.html
static/pages/: edit.html  home.html  timeline.html  view.html
www/: index.html  lang-en.json  lang-fr.json
www/assets/css/: font-awesome.min.css  main.css  ocp-timeline.css
www/assets/js/: main.js  timeline.js  util.js  view.js
www/bootstrap/css/: bootstrap_new_default.css  bootstrap_new_slate.css  bootstrap_slate.css
www/css/: custom.css  ocp-timeline.css
www/edit/: index.html
www/js/: ocptimeline-js-website.js
www/view/: index.html
