(executable
 (name api)
 (modules api)
 (libraries api_lib))

(library
 (name api_data)
 (modules apiData)
 (libraries
   data_encoding
   dbData
   ))

(library
 (name email)
 (modules sendgrid_encoding sendgrid_xhr emails)
 (libraries
   timeline_data
   data_encoding
   ez_api.cohttp_lwt
   config
   ))

(library
 (name api_services)
 (modules apiServices)
 (libraries
   ez_api
   ez_api.encoding
   timeline_data
   api_data
   config

))

(library
 (name api_lib)
 (modules apiHandlers apiServer)
 (libraries
   config
   email
   ez_api.server
   ez_api.server_utils
   api_data
   database_reader_lib
   database_writer_lib
   timeline_data
   data_encoding
   api_services
))