(library
 (name data_types)
 (modules data_types)
 (libraries calendar)
)

(library
 (name utils)
 (modules misc csv_utils)
 (libraries calendar csv data_types))

(library
 (name data_encoding)
 (modules data_encoding)
 (libraries
   ;;ocplib-json-typed
   json-data-encoding
   ;;yojson
   data_types
   utils
))

(library
 (name xhr_lwt)
 (modules xhr_lwt)
 (libraries
   ;;ocplib-json-typed
   json-data-encoding
   ezjsonm
   js_of_ocaml-lwt
   ;;yojson
  ))
