(library
 (name dbData)
 (modules dbData)
 (libraries timeline_data calendar))

(library
 (name database_interface)
 (modules monad_lwt db_intf)
 (libraries lwt.unix timeline_data calendar dbData))

(library
 (name database_version)
 (modules dBVersions)
 (libraries ez_pgocaml config))

(library
 (name database_reader_lib)
 (modules reader)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries timeline_data database_interface ez_pgocaml config lwt lwt.unix sha))

(library
 (name database_writer_lib)
 (modules writer)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries timeline_data database_interface ez_pgocaml config
   database_reader_lib))

(executable
 (name dBUpdater)
 (modules dBUpdater)
 (libraries database_version))

(executable
 (name cleaner)
 (modules cleaner)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
 (pps pgocaml_ppx))
 (libraries
   ;; ocplib-json-typed
   json-data-encoding
   database_reader_lib
   database_writer_lib))