(library
 (name db_config)
 (modules db_config)
 (libraries
  json-data-encoding
  ezjsonm))

(library
 (name db_version)
 (modules db_version)
 (libraries ez_pgocaml db_config))

(library
 (name db_data)
 (modules db_data)
 (libraries timeline_data calendar))

(library
 (name database_interface)
 (modules monad_lwt db_intf)
 (libraries lwt.unix timeline_data calendar db_data))

(library
 (name database_reader_lib)
 (modules reader)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries
   timeline_data
   db_config
   database_interface
   ez_pgocaml
   lwt
   lwt.unix
   sha))

(library
 (name database_writer_lib)
 (modules writer)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries
   timeline_data
   db_config
   database_interface
   ez_pgocaml
   database_reader_lib))

(executable
 (name dBUpdater)
 (modules dBUpdater)
 (libraries db_version))

(executable
 (name cleaner)
 (modules cleaner)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
 (pps pgocaml_ppx))
 (libraries
   json-data-encoding
   database_reader_lib
   database_writer_lib))