(library
 (name db_config)
 (modules db_config)
 (libraries
  json-data-encoding
  ezjsonm))

(library
 (name db_version)
 (modules db_version)
 (libraries ez_pgocaml db_config))

(library
 (name db_data)
 (modules db_data)
 (libraries data_types calendar))

(library
 (name database_interface)
 (modules monad_lwt db_intf)
 (libraries lwt.unix data_types calendar db_data))

(library
 (name database_reader_lib)
 (modules reader)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries
   data_types
   utils
   db_config
   database_interface
   ez_pgocaml
   lwt
   lwt.unix
   sha))

(library
 (name database_writer_lib)
 (modules writer)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
  (pps pgocaml_ppx))
 (libraries
   data_types
   utils
   db_config
   database_interface
   ez_pgocaml
   database_reader_lib))

(executable
 (name dBUpdater)
 (modules dBUpdater)
 (libraries db_version))

(executable
 (name cleaner)
 (modules cleaner)
 (preprocessor_deps (env_var PGDATABASE))
 (preprocess
 (pps pgocaml_ppx))
 (libraries
   json-data-encoding
   database_reader_lib
   database_writer_lib))